# lks32mc08x_gcc

./: .gitignore  CMakeLists.txt  LKS32MC081xxx_FLASH.ld  LK_StdPeriph_ADC.uvguix.shun  LK_StdPeriph_ADC.uvoptx  LK_StdPeriph_ADC.uvprojx  makefile  note.txt  startup_lks32mc08x_gcc.s
AppFunction/: hardware_init.c  interrupt.c
LKS32MC08x/: core_cm0.c.txt  core_cm0.h
SEGGER_RTT/: SEGGER_RTT.c  SEGGER_RTT.h  rtt_debug.h
include/: hardware_config.h  hardware_init.h
lks32mc08x_periph_driver/Include/: LKS32MC08x_lin.h  lks32mc08x_NVR.h  lks32mc08x_sys.h
lks32mc08x_periph_driver/Source/: LKS32MC08x_lin.c  lks32mc08x_sys.c
source/: delay.c  hardware_init.c  interrupt.c  main.c
tools/: makefile
tools/jlink/: Example_HaltAfterBTLUsingBP_RaspberryPi_RP2040.JLinkScript.txt  Example_ResetAndHalt.JLinkScript  Example_SetAPForBGAccess.JLinkScript  Example_SkipDebugDeInit.JLinkScript  Infineon_TraveoT2G_CM7_ResetExample.JLinkScript  LKS32AT089XL_cm0 copy.JLinkScript  LKS32AT089XL_cm0.JLinkScript  TRAVEO2_1M_cm0plus.JLinkScript  TRAVEO2_1M_cm4.JLinkScript  Template_AttachMode.JLinkScript
